--- a/app/src/main/res/layout/cardview_1.xml
+++ b/app/src/main/res/layout/cardview_1.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/back_color"
@@ -30,12 +31,14 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <ImageButton
+            android:id="@+id/imageButtonCrd1"
             android:layout_width="@dimen/layout_width"
             android:layout_height="wrap_content"
             android:layout_weight="0.2"
-            app:srcCompat="@drawable/ic_favorite_false" />
+            android:background="#00FFFFFF"
+            android:src="@drawable/ic_favorite_false" />
+
 
         <TextView
             android:id="@+id/textView2"
@@ -45,6 +48,7 @@
             android:layout_weight="0.8"
             android:text="@string/clio_price"
             android:textSize="@dimen/text_2_size" />
+
     </LinearLayout>
 
     <TextView
