--- a/app/src/main/res/layout/cardview_2.xml
+++ b/app/src/main/res/layout/cardview_2.xml
@@ -17,7 +17,6 @@
         android:text="@string/megan_sedan_title"
         android:textColor="@color/title_color"
         android:textSize="@dimen/title_size" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -25,17 +24,19 @@
         android:adjustViewBounds="true"
         app:srcCompat="@drawable/megane" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="@dimen/layout_margin_top"
+        <ImageButton
+            android:id="@+id/imageButtonCrd2"
+            android:layout_width="@dimen/layout_width"
             android:layout_height="wrap_content"
             android:layout_weight="0.2"
-            app:srcCompat="@drawable/ic_favorite_false" />
+            android:background="#00FFFFFF"
+            android:src="@drawable/ic_favorite_false"/>
 
         <TextView
             android:id="@+id/textView2"
