--- a/app/src/main/res/layout/cardview_3.xml
+++ b/app/src/main/res/layout/cardview_3.xml
@@ -30,12 +30,14 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <ImageButton
+            android:id="@+id/imageButtonCrd3"
             android:layout_width="@dimen/layout_width"
             android:layout_height="wrap_content"
             android:layout_weight="0.2"
-            app:srcCompat="@drawable/ic_favorite_false" />
+            android:background="#00FFFFFF"
+            android:src="@drawable/ic_favorite_false" />
+
 
         <TextView
             android:id="@+id/textView2"
